Fix PMD violations in shoonya-reader